Added 2 pointer approach for 2 sum problem